fix: selector method that use document as a binding (like document.getElements or document.querySelectorAll) are now supported feature: add support in configuration file of no framework loading to test against native browser implementation like document.querySelectorAll doc: update documentation and add copyright courtesy of Valerio Proietti the official project owner

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 </div>
 <div id="footer">
-	<p class="footer">copyright &copy; 2009 <a href="http://mad4milk.net">Valerio Proietti</a> | MIT License | <a href="http://github.com/kamicane/slickspeed/">download from github</a></p>
+	<p class="footer">copyright &copy; 2009 <a href="http://mad4milk.net">Valerio Proietti</a> <a href="http://twitter.com/neleanth">Renaud Morvan</a> | MIT License | <a href="http://github.com/kamicane/slickspeed/">download from github</a></p>
 </div>
 </body>
 </html>
